v4: Navbar - fix MD theme overflow

--- a/src/core/components/navbar/navbar-md.less
+++ b/src/core/components/navbar/navbar-md.less
@@ -32,10 +32,10 @@
     overflow: hidden;
     padding: 0 var(--f7-safe-area-right) 0 var(--f7-safe-area-left);
   }
-  .navbar-inner-large {
+  .navbar-inner-large:not(.navbar-inner-large-collapsed) {
     overflow: visible;
   }
-  .page-with-subnavbar .navbar-inner {
+  .page.page-with-subnavbar .navbar-inner {
     overflow: visible;
   }
   .navbar-inner-centered-title {
